--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
          <artifactId>selenium-server</artifactId>
           <version>3.0.0-beta3</version>
    </dependency>
+  <dependency>
+  	<groupId>org.yaml</groupId>
+  	<artifactId>snakeyaml</artifactId>
+  	<version>1.17</version>
+  </dependency>
   </dependencies>
  <build>
 <plugins>
