--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+     <xmlFileName>testng.xml</xmlFileName>
+  </properties>	
+  
+  
   <dependencies>
   <dependency>
   	<groupId>org.testng</groupId>
@@ -36,7 +39,28 @@
   	<artifactId>snakeyaml</artifactId>
   	<version>1.17</version>
   </dependency>
+  <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+	<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.2</version>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.uncommons/reportng -->
+    <dependency>
+    <groupId>org.uncommons</groupId>
+    <artifactId>reportng</artifactId>
+    <version>1.1.4</version>
+   </dependency>
+	<dependency>
+    <groupId>com.google.inject</groupId>
+    <artifactId>guice</artifactId>
+    <version>4.1.0</version>
+	</dependency>
   </dependencies>
+  
+
+	  
+  
  <build>
 <plugins>
 <plugin>
@@ -47,8 +71,29 @@
 <target>1.5</target>
 </configuration>
 </plugin>
+       <!-- 添加插件,添加ReportNg的监听器，修改最后的TestNg的报告,xmlFileName在前面已经定义了 -->
+       <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.17</version>
+            <configuration>
+              <suiteXmlFiles>
+                  <suiteXmlFile>${xmlFileName}</suiteXmlFile>
+              </suiteXmlFiles>
+                <properties>
+                    <property>
+                        <name>usedefaultlisteners</name>
+                        <value>false</value>
+                    </property>
+                    <property>
+                        <name>listener</name>                      
+                        <value>org.uncommons.reportng.HTMLReporter,  org.uncommons.reportng.JUnitXMLReporter</value>
+                    </property>
+                </properties>
+                <workingDirectory>.</workingDirectory>
+                <forkMode>always</forkMode>
+            </configuration>
+        </plugin>
 </plugins>
 </build> 
-  
-  
 </project>
