--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
     <artifactId>guice</artifactId>
     <version>4.1.0</version>
 	</dependency>
+	<dependency>
+    <groupId>net.sf.json-lib</groupId>
+    <artifactId>json-lib</artifactId>
+    <version>2.4</version>
+    </dependency>
   </dependencies>
   
 
