--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
     <artifactId>jackson-databind</artifactId>
     <version>2.8.3</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-log4j12</artifactId>
+    <version>1.7.21</version>
+</dependency>
   </dependencies>
   
 
