--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,17 @@
     <artifactId>slf4j-log4j12</artifactId>
     <version>1.7.21</version>
 </dependency>
+<dependency>
+    <groupId>com.jayway.jsonpath</groupId>
+    <artifactId>json-path</artifactId>
+    <version>2.2.0</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+<dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.10.1</version>
+</dependency>
   </dependencies>
   
 
