--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com</groupId>
   <artifactId>auto</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -14,95 +13,102 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <xmlFileName>testng.xml</xmlFileName>
   </properties>	
-  
-  
-  <dependencies>
+
+<dependencies>
   <dependency>
   	<groupId>org.testng</groupId>
  	 <artifactId>testng</artifactId>
  	 <version>6.8</version>
  	 <scope>test</scope>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
-<dependency>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+  <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>2.53.1</version>
-</dependency>
+  </dependency>
   <dependency>
         <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-server</artifactId>
           <version>3.0.0-beta3</version>
-   </dependency>
+  </dependency>
   <dependency>
   	<groupId>org.yaml</groupId>
   	<artifactId>snakeyaml</artifactId>
   	<version>1.17</version>
   </dependency>
   <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
-	<dependency>
+  <dependency>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpclient</artifactId>
     <version>4.5.2</version>
-	</dependency>
+  </dependency>
 	<!-- https://mvnrepository.com/artifact/org.uncommons/reportng -->
-    <dependency>
+  <dependency>
     <groupId>org.uncommons</groupId>
     <artifactId>reportng</artifactId>
     <version>1.1.4</version>
-   </dependency>
-	<dependency>
+  </dependency>
+  <dependency>
     <groupId>com.google.inject</groupId>
     <artifactId>guice</artifactId>
     <version>4.1.0</version>
-	</dependency>
-<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-core-asl -->
-<dependency>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-core-asl -->
+  <dependency>
     <groupId>org.codehaus.jackson</groupId>
     <artifactId>jackson-core-asl</artifactId>
     <version>1.9.13</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
-<dependency>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
+  <dependency>
     <groupId>org.codehaus.jackson</groupId>
     <artifactId>jackson-mapper-asl</artifactId>
     <version>1.9.13</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
-<dependency>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
+  <dependency>
     <groupId>org.codehaus.jackson</groupId>
     <artifactId>jackson-mapper-asl</artifactId>
     <version>1.9.13</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-<dependency>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+  <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
     <version>2.8.3</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
-<dependency>
+  </dependency>
+  <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+  <dependency>
     <groupId>org.slf4j</groupId>
     <artifactId>slf4j-log4j12</artifactId>
     <version>1.7.21</version>
-</dependency>
-<dependency>
+  </dependency>
+  <dependency>
     <groupId>com.jayway.jsonpath</groupId>
     <artifactId>json-path</artifactId>
     <version>2.2.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
-<dependency>
+  </dependency>
+
+  <dependency>
     <groupId>org.jsoup</groupId>
     <artifactId>jsoup</artifactId>
     <version>1.10.1</version>
-</dependency>
-  </dependencies>
+  </dependency>
+  <dependency>
+        <groupId>com.jayway.restassured</groupId>
+        <artifactId>rest-assured</artifactId>
+        <version>2.8.0</version>
+  </dependency>
+  <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+        <version>1.3</version>
+  </dependency>
+</dependencies>
   
 
-	  
-  
- <build>
+<build>
 <plugins>
 <plugin>
 <artifactId>maven-compiler-plugin</artifactId>
@@ -110,6 +116,7 @@
 <configuration>
 <source>1.7</source>
 <target>1.7</target>
+<encoding>utf8</encoding>
 </configuration>
 </plugin>
        <!-- 添加插件,添加ReportNg的监听器，修改最后的TestNg的报告,xmlFileName在前面已经定义了 -->
